k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-test-1
spec:
  selector:
    app: test-1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
