k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-test
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /      # if you need to rewrite the path
spec:
  rules:
    - http:
        paths:
          - backend:  
              service:
                name: service-test-1
                port:
                  number: 80
            pathType: Prefix
            path: /  # This is the path that will be used to access the service. e.g. /test-1
